overflow bugs

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -7,9 +7,9 @@ body {
   );
   transition: color 0.5s, background-color 0.5s;
   line-height: 1.6;
-  font-family: Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Chalkduster,
+    Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans",
+    "Helvetica Neue", sans-serif;
   font-size: 15px;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -17,7 +17,6 @@ body {
 }
 
 .parallelFont {
-    font-family: Chalkduster !important;
+  font-family: Chalkduster !important;
   font-size: larger;
 }
-
